# phinq

./: .gitignore  CHANGELOG.md  CLAUDE-FABLE5-HANDOFF.md  CONTRIBUTING.md  HOSTED-LAYER-ARCH.md  PHINQ-AUDIT-LOG-SPEC.md  PROXY-MVP.md  README.md  TEST-GAPS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: litellm.md
proxy/: .gitignore  DAY0-FINDINGS.md  Dockerfile  README.md  package-lock.json  package.json
proxy/day0/: stub.mjs
proxy/src/: anthropic.ts  audit-verify.ts  audit.ts  classifier.ts  cli.ts  config.ts  gemini.ts  holds.ts  index.ts  init.ts  learn.ts  mcp-gateway.ts  mcp-main.ts  phinq-config.ts  replay.ts  report.ts  responses.ts  server.ts  session.ts  slack.ts  sse.ts  telegram.ts  toolcalls.ts  upstream.ts
proxy/test/: anthropic.test.ts  audit.test.ts  classifier.test.ts  gemini.test.ts  gen-parity-expected.ts  holds.test.ts  init.test.ts  learn.test.ts  local-approve.test.ts  mcp-gateway.test.ts  parity.test.ts  proxy.test.ts  report.test.ts  responses.test.ts  slack.test.ts  sse.test.ts  tokens.test.ts
proxy/test/fixtures/: parity-corpus.jsonl  parity-expected.json
python/: README.md  pyproject.toml
python/src/phinq/: __init__.py  classifier.py  governor.py  litellm_guardrail.py
python/tests/: test_classifier.py  test_governor.py  test_litellm_guardrail.py  test_parity.py
sdk/: package-lock.json  package.json
sdk/examples/mastra/: demo.ts  package-lock.json  package.json
sdk/scripts/: sync-classifier.mjs
sdk/src/: governor.ts  index.ts  session.ts
sdk/test/: governor.test.ts
(+1 files in other folders)
